@@ -1,0 +1,10 @@
+<header>Automatic reply start date</header>
+
+When <b>Any time</b> is selected (as it is by default), Virtualmin will
+send an automatic reply regardless of the date email was received. However, you
+can select <b>On date</b> and enter a date into the adjacent fields to prevent
+autoreplies from being sent before that day. This can be useful when setting up
+an autoreponder for someone who is going on vacation on a known date.<p>
+
+<footer>
+
