@@ -676,3 +676,4 @@ Added an installer for Radiant, a Ruby on Rails content management system. Unfor
 When a virtual server is deleted, all Mongrel server processes for Ruby on Rails applications associated with it are stopped, and prevented from starting at boot time.
 Added checks for gcc and make to the Ruby on Rails script installers (needed to compile the MySQL driver), and make checking for commands by scripts more generic.
 Added a restriction to the Edit Owner Limits page to prevent the creation of catchall email aliases.
+Added fields to the autoreply section of the alias and user email forwarding pages to limit the date range on which replies are sent.
